2002-01-07  Dancer Vesperman  <dancer@users.sourceforge.net>

	* tools/expack.cc broken. Locally provided getline() fails to operate correctly on the last line. Use standard fstream getline() instead. Made sure it handles MAC line-endings.

2002-01-06  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Init. map for BuildGameMap().
	* game.h,game.cc,exult.cc:  Prepare for newly-developed games.

2002-01-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* args.cc: fixed bug with missing arguments
	* exult.cc: more minor commandline syntax changes/fixes

2002-01-06  Ryan Nunn  <triforce@merlin.net.au>
	* Makefile.win32, Makefile.cygwin : Just added some stuff to allow
	  people to compile Exult as a console win32 application. Read the
	  makefiles to find out how.

2002-01-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: changed command line parameter syntax. See 'exult --help'

2002-01-05  Max Horn  <max@quendi.de>

	* mapedit/Makefile.am: fixed occurance of LIBGLADE_CFLAGS to LIBGLADE_INCLUDES

2002-01-05  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added support for the 'debug' opcodes in the Spanish
	version of SI. It'll output the 'function name' rather then just a
	munged version involving the opcode number under -fz, no effect if the
	'dbgfunc' opcode is not found in the function. Also added an
	undocumented parameter --extern-header which will kind of output
	something that looks like a header file for usecode, sometime soon.

2002-01-04  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.h,actorio.cc (public): Properties changed from short to int.
	* usecode/ucinternal.cc (remove_party_items):  If quantity==-359,
	search entire party.

	* objs/jawbone.h: Yow.  Passing unitialized instance variable to parent
	class constructor.

	* actors.cc: Limit max. magic, combat to 30 points.

	* effects.cc (Projectile_effect): Applied user's patch to fix
	boomerang bug.
